NXP-28581: remove dependency on nuxeo-automation-client